trunk/Archive2/9f/6595364d161129/output
clang version 3.6.0 (tags/RELEASE_360/final 235480)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:11:13: error: no viable conversion from 'Foo' to 'int'
    Foo foo{bar}; // error here
            ^~~
1 error generated.
g++ (GCC) 5.2.0
Copyright (C) 2015 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

main.cpp: In function 'int main()':
main.cpp:11:16: error: no matching function for call to 'Foo::Foo(Foo&)'
     Foo foo{bar}; // error here
                ^
main.cpp:3:5: note: candidate: Foo::Foo()
     Foo() = default;
     ^
main.cpp:3:5: note:   candidate expects 0 arguments, 1 provided
